--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,18 @@ cache:
 env:
   matrix:
 # - EMULATOR_API_LEVEL=23  ANDROID_EMULATOR_IMAGE=sys-img-armeabi-v7a-android-23
-  - EMULATOR_API_LEVEL=24  ANDROID_EMULATOR_IMAGE=sys-img-arm64-v8a-android-24
+#  - EMULATOR_API_LEVEL=24  ANDROID_EMULATOR_IMAGE=sys-img-arm64-v8a-android-24
 # - EMULATOR_API_LEVEL=21  ANDROID_EMULATOR_IMAGE=sys-img-armeabi-v7a-android-21
 # - EMULATOR_API_LEVEL=19  ANDROID_EMULATOR_IMAGE=sys-img-armeabi-v7a-android-19
+  - EMULATOR_API_LEVEL=27  ANDROID_EMULATOR_IMAGE=sys-img-x86-android-27
 
   global:
     - ANDROID_API_LEVEL=27
     - ANDROID_BUILD_TOOLS_VERSION=27.0.3
     - ADB_INSTALL_TIMEOUT=20 # wait up to 20 minutes for adb to connect to emulator (2 minutes by default)
-    - ANDROID_ABI=arm64-v8a
-    
+#    - ANDROID_ABI=arm64-v8a
+    - ANDROID_ABI=x86_64
+
 android:
   components:
     # Base components 
